  miniapp in the miniapps/dfem/ directory for illustration of dFEM's use.

- Using Enzyme for AD in MFEM is tested with clang v19 and requires clang/LLVM
  built with plugin support. See INSTALL for more details.

- In the ParMoonolith integration, added support for variational resampling of
  H1 vector fields.

Meshing improvements
--------------------

- Added support for higher order meshes in Mesh::MakeSimplicial and
  ParMesh::MakeSimplicial.

- Added a new miniapp for interpolating a surface grid of points in 3D using a
  smooth NURBS surface, that can then be sampled at arbitrary resolution while
  staying close to the original geometry. See miniapps/nurbs/nurbs_surface.

GPU computing
-------------
- The function Vector::SetSubVector(const Array<int> &, const real_t) now
  executes on device if either the vector or the array have the device flag
  set. This is most often used for setting constant essential boundary
  conditions. A new function Vector::SetSubVectorHost has been added in cases
  where host execution is always needed (e.g. when the DOFs array is small).
- Introduced MFEM_FOREACH_THREAD_DIRECT, which directly maps loop tasks to GPU
  threads, assigning one task per thread.
- Implemented a GPU-accelerated matrix-free AMR derefinement `GridFunction`
  update operator. This supports mixed geometry meshes and variable order
  spaces, and is the default derefinement operator constructed by
  `FiniteElementSpace::Update` and `ParFiniteElementSpace::Update`.
  The operator requires `FiniteElementSpace::Nonconforming() == true`.

New and updated examples and miniapps
-------------------------------------
- Added miniapps to demonstrate an implementation of the absolute-value
  L(1)-Jacobi preconditioners in partially assembled operators. This includes
  Multigrid wrapper to demonstrate the effectiveness of these Jacobi-type
  operators as smoothers.
  These miniapps can be found in `miniapps/diag-smoothers`.

API changes
-----------